# repo-test

./: devcontainer.json  scratch.ipynb
.devcontainer/conda_subproject/: devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/poetry_subproject/: Dockerfile  devcontainer.json  kernel.json  post-create.sh  setup.sh
apps/fastapi_reqs/: requirements.txt  test_app.py
conda_subproject/: installed_packages.txt  pyproject.toml
conda_subproject/conda_proj/: app.py
conda_subproject/tests/: test_app.py
init_test/project/nested_package/: __init__.py  core.py
init_test/project/nested_package_twice/: __init__.py  base_class.py  core.py
init_test/project/package_name/: __init__.py  core.py  derived_class.py  derived_class_alias.py  derived_class_module.py
init_test/project/package_name/tests/: test_aliased_package_import.py  test_direct_symbol_import.py  test_invalid_package_export.py  test_module_namespace_import.py  test_object_call_tracking.py  (+7 more)
init_test/something/: __init__.py
init_test/something/tests/: test_something.py
poetry_subproject/: README.md  pyproject.toml  pyvenv.cfg
poetry_subproject/poetry_subproject/: setup.sh
poetry_subproject/poetry_subproject/parser/: base_parser.py  symbol_parser.py  util.py
poetry_subproject/poetry_subproject/service/: alias_wildard_imports.py  random_service.py
poetry_subproject/tests/: test_app.py
poetry_subproject/tests/parser/: test_symbol_parser.py
poetry_subproject/tests/service/: test_alias_wildcard_imports.py  test_random_service.py
wildcards_test/something/: core.py
