[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "conda_proj"
    version = "0.1.0"
    description = "A short description of your project"
    requires-python = ">=3.11"
    dependencies = [
        "pytest>=8.3.3",
        "pytest-asyncio>=0.24.0",
        "fastapi==0.100.1",
    ]
