[tool.poetry]
name = "poetry-subproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
fastapi = "^0.115.2"
tree-sitter = "^0.23.2"
tree-sitter-python = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
